unused classes deleted

--- a/notification-api/appsettings.Development.json
+++ b/notification-api/appsettings.Development.json
@@ -9,6 +9,6 @@
     }
   },
   "ConnectionStrings": {
-    "database": "Server=172.17.0.1,1433; Initial Catalog=emailDb;  User ID = SA; Password=1Secure*Password1;TrustServerCertificate=True"
+    "database": "Server=localhost,1433; Initial Catalog=emailDb;  User ID = SA; Password=1Secure*Password1;TrustServerCertificate=True"
   }
 }
